# popcorn-chameleon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: alarm.h  arch.h  binary.h  config.h.in  log.h  memoryview.h  parasite.h  process.h  ptrace.h  randomize.h  trace.h  transform.h  types.h  userfaultfd.h  utils.h
patches/: compel.patch
src/: CMakeLists.txt  alarm.cpp  arch.cpp  binary.cpp  chameleon.cpp  memoryview.cpp  parasite.cpp  process.cpp  ptrace.cpp  randomize.cpp  trace.cpp  transform.cpp  types.cpp  userfaultfd.cpp  utils.cpp
src/parasite/: chameleon-parasite.c
util/: debug.gdb  gadgets-disrupted.py  install-compel.sh  parse-entropy.py  parse-transform-log.py  prepare-executable.sh
